[package]
name = "ozone-ws"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = "Web service to scan files with ClamAV"
homepage = "https://github.com/veeso-dev/ozone"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["smb", "samba", "network-protocol", "smb2", "smb3"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/veeso-dev/ozone"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ozone"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
envy = "^0.4"
lazy_static = "^1.4"
reqwest = { version = "^0.11", features = ["rustls-tls"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
thiserror = "^1.0"

[dev-dependencies]
env_logger = "^0.10"
pretty_assertions = "^1.0.0"

[features]
with-containers = []
